Fix Vite build config - move scripts to public dir

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     <p class="copyright">© 2026 GANLAND. All rights reserved.</p>
   </footer>
 
-  <script src="./matrix.js"></script>
-  <script src="./mountains.js"></script>
-  <script src="./glitch.js"></script>
-  <script src="./countdown.js"></script>
+  <script src="/matrix.js"></script>
+  <script src="/mountains.js"></script>
+  <script src="/glitch.js"></script>
+  <script src="/countdown.js"></script>
 </body>
 </html>
