Update contact info - X only, remove emails

--- a/privacy.html
+++ b/privacy.html
@@ -217,7 +217,7 @@
     <li>Object to certain processing of your information</li>
     <li>Data portability</li>
   </ul>
-  <p>To exercise these rights, contact us at <a href="mailto:privacy@ganland.io">privacy@ganland.io</a>.</p>
+  <p>To exercise these rights, contact us via <a href="https://x.com/GanlandNFT" target="_blank">@GanlandNFT</a> on X.</p>
   
   <h2>9. Children's Privacy</h2>
   <p>Our Services are not intended for users under 18 years of age. We do not knowingly collect information from children. If you believe we have collected information from a minor, please contact us.</p>
@@ -229,10 +229,9 @@
   <p>We may update this Privacy Policy periodically. We will notify you of significant changes by posting the new policy on our website and updating the "Last Updated" date.</p>
   
   <h2>12. Contact Us</h2>
-  <p>For questions about this Privacy Policy or our data practices:</p>
+  <p>For questions about this Privacy Policy or our data practices, contact us on X/Twitter:</p>
   <ul>
-    <li>Email: <a href="mailto:privacy@ganland.io">privacy@ganland.io</a></li>
-    <li>X/Twitter: <a href="https://x.com/GanlandNFT" target="_blank">@GanlandNFT</a></li>
+    <li><a href="https://x.com/GanlandNFT" target="_blank">@GanlandNFT</a></li>
   </ul>
   
   <p style="margin-top: 3rem; color: var(--text-dim);">By using GANLAND, you acknowledge that you have read and understood this Privacy Policy.</p>
