--- a/terms.html
+++ b/terms.html
@@ -175,10 +175,9 @@
   <p>These Terms are governed by the laws of the State of Colorado, United States, without regard to conflict of law principles.</p>
   
   <h2>12. Contact</h2>
-  <p>For questions about these Terms, contact us at:</p>
+  <p>For questions about these Terms, contact us on X/Twitter:</p>
   <ul>
-    <li>Email: <a href="mailto:legal@ganland.io">legal@ganland.io</a></li>
-    <li>X/Twitter: <a href="https://x.com/GanlandNFT" target="_blank">@GanlandNFT</a></li>
+    <li><a href="https://x.com/GanlandNFT" target="_blank">@GanlandNFT</a></li>
   </ul>
   
   <p style="margin-top: 3rem; color: var(--text-dim);">By using GANLAND, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service.</p>
