Fix terms/privacy URLs - remove .html extension

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   <!-- Footer -->
   <footer class="footer">
     <nav class="footer-nav">
-      <a href="/terms.html">Terms</a>
+      <a href="/terms">Terms</a>
       <span class="separator">|</span>
-      <a href="/privacy.html">Privacy</a>
+      <a href="/privacy">Privacy</a>
       <span class="separator">|</span>
       <a href="https://x.com/GanlandNFT" target="_blank">X</a>
     </nav>
