Add OG image for social sharing
- Added colorful fractal landscape as og-image.jpg
- Updated meta tags for OpenGraph and Twitter cards
- Added @GanlandNFT twitter handle

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <meta name="description" content="GANLAND - AI-powered generative art platform for artists and musicians. Deploy smart contracts on the Superchain.">
   <meta property="og:title" content="GANLAND - Generative Art Network">
   <meta property="og:description" content="AI-powered generative art platform for artists and musicians on the Superchain.">
-  <meta property="og:image" content="https://ganland.io/og-image.png">
+  <meta property="og:image" content="https://ganland.io/og-image.jpg">
   <meta property="og:url" content="https://ganland.io">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://ganland.io/og-image.jpg">
+  <meta name="twitter:site" content="@GanlandNFT">
   <link rel="icon" type="image/svg+xml" href="./favicon.svg">
   <link href="https://fonts.googleapis.com/css2?family=VT323&family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
