--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="description" content="GANLAND - AI-powered generative art platform for artists and musicians. Deploy smart contracts on the Superchain.">
   <meta property="og:title" content="GANLAND - Generative Art Network">
   <meta property="og:description" content="AI-powered generative art platform for artists and musicians on the Superchain.">
-  <meta property="og:image" content="https://ganland.io/og-image.jpg">
+  <meta property="og:image" content="https://gateway.pinata.cloud/ipfs/QmVGZ6DDpupoqEZcXYix83YkbSQpW53oS1sMNDRzVtrPoc">
   <meta property="og:url" content="https://ganland.io">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://ganland.io/og-image.jpg">
+  <meta name="twitter:image" content="https://gateway.pinata.cloud/ipfs/QmVGZ6DDpupoqEZcXYix83YkbSQpW53oS1sMNDRzVtrPoc">
   <meta name="twitter:site" content="@GanlandNFT">
   <link rel="icon" type="image/svg+xml" href="./favicon.svg">
   <link href="https://fonts.googleapis.com/css2?family=VT323&family=Share+Tech+Mono&display=swap" rel="stylesheet">
